fixed popup leak on mobile

--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -28,10 +28,9 @@
     position: relative;
 
     @media screen and (max-width: 600px) {
-      min-height: 100px;
-      height: 100%;
       max-height: 90%;
       padding: 24px;
+      overflow-y: auto;
     }
 
     .closeButton {
